--- a/_includes/social.html
+++ b/_includes/social.html
@@ -109,6 +109,9 @@
             {%- if site.rss_icon -%}
             <a href="{{ site.baseurl }}/feed.xml" title="RSS Feed"><i class="fas fa-rss-square"></i></a>
             {% endif %}
+            {%- if site.ko_fi_url -%}
+            <a href="{{ site.ko_fi_url }}" title="Ko-fi"><i class="fas fa-coffee"></i></a>
+            {% endif %}
             {%- if site.wechat_qr -%}
             <a id="WeChatBtn" title="WeChat"><i class="fab fa-weixin"></i></a>
             <div id="WeChatMod" class="wechat-modal">
