--- a/assets/html/styles.css
+++ b/assets/html/styles.css
@@ -7,13 +7,13 @@ body {
     color: #ffffff;
 }
 h1 {
-    color: #2f89ea;
+    color: #a860ec;
 }
 h2 {
-    color: #2f89ea;
+    color: #a860ec;
 }
 h3 {
-    color: #2f89ea;
+    color: #a860ec;
 }
 a {
     color: #2feab2;
